# klogg

./: .clang-format  .clangd  .cmake-format  .gitignore  .gitmodules  BUILD.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DOCUMENTATION.md  NOTICE  README.md  gen_changelog.py  latest.json
.github/: FUNDING.yml
.github/actions/agent-build/: action.yml
.github/actions/agent-package-mac/: action.yml
.github/actions/agent-package-win/: action.yml
.github/actions/agent-run-tests/: action.yml
.github/actions/agent-setup/: action.yml
.github/actions/docker-build/: action.yml
.github/actions/docker-package/: action.yml
.github/actions/docker-run-tests/: action.yml
.github/actions/klogg-version/: action.yml
.github/actions/prepare-boost/: action.yml
.github/actions/prepare-workspace-env/: action.yml
.github/workflows/: ci-build.yml  ci-release.yml  codeql-analysis.yml  test_env.yml
cmake/: CompilerFlags.cmake  CompilerWarnings.cmake  FindUchardet.cmake  Findhyperscan.cmake  Findrobin_hood.cmake  Findtbb.cmake  Findtbbmalloc_proxy.cmake  FindxxHash.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  TranslationUtils.cmake  generate_version_h.cmake  prepare_version.cmake  win32_rc.cmake
docker/centos8/: Dockerfile
docker/oracle7/: Dockerfile  epel.repo
docker/oracle8/: Dockerfile  epel.repo
docker/ubuntu18.04/: Dockerfile
docker/ubuntu18.04_qt5.15/: Dockerfile
docker/ubuntu20.04/: Dockerfile
docker/ubuntu22.04/: Dockerfile
packaging/: description.txt
packaging/linux/: deb  dev.filimonov.klogg.desktop  dev.filimonov.klogg.metainfo.xml  rpm
packaging/linux/appimage/: generate_appimage.sh
packaging/osx/: distribution.xml
packaging/windows/: 7z_klogg_listfile.txt  7z_pdb_listfile.txt  klogg.nsi  prepare_release.cmd
packaging/windows/chocolatey/: .gitignore  klogg.nuspec
scripts/: release_stats.py
src/: CMakeLists.txt
src/app/: CMakeLists.txt  cli.h  crashhandler.cpp  klogg.qrc  klogg_grep.cpp  kloggapp.h  main.cpp  messagereceiver.h
src/app/i18n/: Languages.xml  en.ts  zh-CN.ts  zh_CN.ts
src/crash_handler/: CMakeLists.txt
src/crash_handler/include/: cpu_info.h  crashhandler.h
src/crash_handler/src/: cpu_info.cpp  crashhandler.cpp  issuereporter.cpp  memory_info.cpp
src/filewatch/: CMakeLists.txt
src/filewatch/include/: filewatcher.h
src/filewatch/src/: filewatcher.cpp
src/klogg_version/: CMakeLists.txt
src/logdata/: CMakeLists.txt
src/logdata/include/: abstractlogdata.h  blockpool.h  compressedlinestorage.h  encodingdetector.h  linepositionarray.h  linetypes.h  logdata.h  logdataoperation.h  logdataworker.h  logfiltereddata.h  logfiltereddataworker.h
src/logdata/include/data/: booleanevaluator.h  encodingdetector.h  hsregularexpression.h  linepositionarray.h  linetypes.h  logdataworker.h  logfiltereddata.h  logfiltereddataworker.h
src/logdata/src/: abstractlogdata.cpp  blockpool.cpp  booleanevaluator.cpp  compressedlinestorage.cpp  encodingdetector.cpp  filedigest.cpp  fileholder.cpp  hsregularexpression.cpp  logdata.cpp  logdataoperation.cpp  logdataworker.cpp  logfiltereddata.cpp  logfiltereddataworker.cpp  regularexpression.cpp
src/logging/: CMakeLists.txt
src/logging/include/: log.h  logger.h
src/logging/src/: logger.cpp
src/regex/: CMakeLists.txt
src/regex/include/: booleanevaluator.h  hsregularexpression.h  regularexpression.h
src/regex/src/: booleanevaluator.cpp  hsregularexpression.cpp  regularexpression.cpp
src/settings/: CMakeLists.txt
src/settings/include/: configuration.h  persistable.h  shortcuts.h  styles.h
src/settings/src/: configuration.cpp  persistentinfo.cpp  shortcuts.cpp  styles.cpp
src/ui/: CMakeLists.txt
src/ui/include/: abstractlogview.h  colorlabelsmanager.h  crawlerwidget.h  decompressor.h  displayfilepath.h  downloader.h  encodings.h  filteredview.h  fontutils.h  highlightedmatch.h  highlighteredit.h  highlighteredit.ui  highlightersdialog.h  highlightersdialog.ui  highlighterset.h  highlightersetedit.h  highlightersmenu.h  logmainview.h  mainwindow.h  mainwindowtext.h  menu.h  menuactiontooltipbehavior.h  optionsdialog.h  optionsdialog.ui  overview.h  overviewwidget.h  predefinedfilters.h  predefinedfilterscombobox.h  predefinedfiltersdialog.h  predefinedfiltersdialog.ui  quickfind.h  quickfindmux.h  quickfindpattern.h  quickfindwidget.h  recentfiles.h  savedsearches.h  scratchpad.h  selection.h  session.h  sessioninfo.h  (+3 more)
src/ui/src/: abstractlogview.cpp  colorlabelsmanager.cpp  crawlerwidget.cpp  displayfilepath.cpp  favoritefiles.cpp  filteredview.cpp  highlighteredit.cpp  highlightersdialog.cpp  highlighterset.cpp  highlightersetedit.cpp  iconloader.cpp  infoline.cpp  logmainview.cpp  mainwindow.cpp  mainwindowtext.cpp  menu.cpp  menuactiontooltipbehavior.cpp  optionsdialog.cpp  overview.cpp  overviewwidget.cpp  pathline.cpp  predefinedfilters.cpp  predefinedfilterscombobox.cpp  predefinedfiltersdialog.cpp  quickfind.cpp  quickfindmux.cpp  quickfindpattern.cpp  (+7 more)
src/utils/: CMakeLists.txt
src/utils/include/: active_screen.h  clipboard.h  configuration.h  containers.h  cpu_info.h  crc32.h  log.h  openfilehelper.h  runnable_lambda.h  shortcuts.h  synchronization.h
src/utils/src/: configuration.cpp  cpu_info.cpp
src/versioncheck/: CMakeLists.txt
src/versioncheck/include/: versionchecker.h
src/versioncheck/src/: versionchecker.cpp
test_data/: Chinese-Lipsum.utf16be.txt  ansi_colors_example.txt  random_block_1.5Mb.txt  random_block_100_byte_utf16be.txt  random_block_100_byte_utf16le.txt  random_block_100byte.txt  random_block_1Mb.txt  random_block_1Mb_no_lf.txt  random_block_1Mb_utf16be.txt  random_block_1Mb_utf16le.txt  random_block_512k.txt  random_block_512k_no_lf.txt  utf16_tab_test.txt  utf16be_tab_test.txt  utf8_tab_test.txt
tests/: CMakeLists.txt
tests/helpers/: CMakeLists.txt  file_write_helper.cpp  file_write_helper.h
tests/ui/: CMakeLists.txt  crawlerwidget_test.cpp  logdata_test.cpp  logfiltereddata_test.cpp  qtests_main.cpp
tests/unit/: CMakeLists.txt  linepositionarray_test.cpp  patternmatcher_test.cpp  tests_main.cpp
(+9 files in other folders)
